Update model tests relationships for all tables

--- a/app/views/studios/show.html.erb
+++ b/app/views/studios/show.html.erb
@@ -3,5 +3,8 @@
   <%= @studio.location %>
   <% @studio.movies.each do |movie| %>
     <%= movie.title %>
+    <% movie.actors.each do |actor| %>
+      <%= actor.name %>
+    <% end %>
   <% end %>
 </p>
